--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(to right, rgb(255,255,255), rgb(254,215,173));
+    background: linear-gradient(to right, RGB(0, 128, 128). , rgb(254,215,173));
 }
 
 nav{
